<?xml version="1.0" encoding="UTF-8"?>
<package>

    <name>test_tensorflow</name>
    <version>0.0.0</version>
    <description>test_tensorflow</description>
    <maintainer email="some@example.com">Author</maintainer>
    <license>Apache 2.0</license>

    <!--<buildtool_depend>catkin_simple</buildtool_depend>-->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>tensorflow_catkin</build_depend>

    <run_depend>tensorflow_catkin</run_depend>

</package>